Added  information about coaches for users, added information about requested competitions, removed redundant code